# vscode_cpp_setup

./: CMakeLists.txt  CMakePresets.json  README.md  main.cpp  setup_guide.md
.claude/: settings.local.json
doc/spec/nvme_admin/: 5.1.1 Abort command.md  5.1.10 Format NVM command.md  5.1.11 Get Features command.md  5.1.12 Get Log Page command.md  5.1.13 Identify command.md  5.1.14 Keep Alive command.md  5.1.15 Lockdown command.md  5.1.16 Migration Receive command.md  5.1.17 Migration Send command.md  5.1.18 NVMe-MI Receive command.md  5.1.19 NVMe-MI Send command.md  5.1.2 Asynchronous Event Request command.md  5.1.20 Namespace Attachment command.md  5.1.21 Namespace Management command.md  5.1.22 Sanitize command.md  5.1.23 Security Receive command.md  5.1.24 Security Send command.md  5.1.25 Set Features command.md  5.1.3 Capacity Management command.md  5.1.4 Controller Data Queue command.md  5.1.5 Device Self-test command.md  5.1.6 Directive Receive command.md  5.1.7 Directive Send command.md  5.1.8 Firmware Commit command.md  5.1.9 Firmware Image Download command.md  5.2.1 Create IO Completion Queue command.md  5.2.2 Create IO Submission Queue command.md  5.2.3 Delete IO Completion Queue command.md  5.2.4 Delete IO Submission Queue command.md  5.2.5 Doorbell Buffer Config command.md  5.2.6 Virtualization Management command.md
doc/spec/nvme_io/: 03.01_Submission_Queue_Entry_and_Completion_Queue_Entry.md  03.02.01_IO_Management_Receive_command.md  03.02_IO_Command_behavior_for_the_NVM_Command_Set.md  (+10 more)
src/: nvme_device.cpp  nvme_device.h
tests/: test_main.cpp
(+1 files in other folders)
